// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slider-manager-component reacts to type changes at runtime and keeps aria-* forwarding: runtime-switch/snapshot 1`] = `
<slider-manager-component aria-describedby="dyn-help" type="discrete">
  <discrete-slider-component aria-describedby="dyn-help">
    <div class="discrete stub"><pre class="props">{"kind":"discrete","label":"Dynamic","selectedIndex":0,"stringValues":[],"plumage":false,"tickLabels":false,"unit":"","variant":"","disabled":false,"hideRightTextBox":false,"aria-label":null,"aria-labelledby":null,"aria-describedby":"dyn-help"}</pre>
    </div>
  </discrete-slider-component>
</slider-manager-component>
`;

exports[`slider-manager-component renders BASIC by default and forwards props + aria-*: basic/default-snapshot 1`] = `
<slider-manager-component aria-describedby="speed-help" aria-label="Speed slider" aria-labelledby="speed-label" type="basic">
  <basic-slider-component aria-describedby="speed-help" aria-label="Speed slider" aria-labelledby="speed-label">
    <div class="basic stub"><pre class="props">{"kind":"basic","label":"Speed","value":42,"min":0,"max":120,"unit":"%","plumage":true,"sliderThumbLabel":true,"snapToTicks":true,"tickLabels":true,"tickValues":[0,20,40,60,80,100,120],"variant":"primary","hideTextBoxes":false,"hideLeftTextBox":false,"hideRightTextBox":true,"disabled":false,"aria-label":"Speed slider","aria-labelledby":"speed-label","aria-describedby":"speed-help"}</pre>
    </div>
  </basic-slider-component>
</slider-manager-component>
`;

exports[`slider-manager-component renders DISCRETE and forwards props + unit + aria-*: discrete/snapshot 1`] = `
<slider-manager-component aria-labelledby="quality-label" type="discrete">
  <discrete-slider-component aria-labelledby="quality-label">
    <div class="discrete stub"><pre class="props">{"kind":"discrete","label":"Quality","selectedIndex":2,"stringValues":["Low","Med","High","Ultra"],"plumage":true,"tickLabels":true,"unit":"lvl","variant":"success","disabled":true,"hideRightTextBox":true,"aria-label":null,"aria-labelledby":"quality-label","aria-describedby":null}</pre>
    </div>
  </discrete-slider-component>
</slider-manager-component>
`;

exports[`slider-manager-component switches to MULTI and forwards props + aria-*: multi/snapshot 1`] = `
<slider-manager-component aria-describedby="range-help" aria-label="Range slider" type="multi">
  <multi-range-slider-component aria-describedby="range-help" aria-label="Range slider">
    <div class="multi stub"><pre class="props">{"kind":"multi","label":"Range","lowerValue":10,"upperValue":90,"min":0,"max":100,"unit":"","plumage":false,"sliderThumbLabel":false,"snapToTicks":true,"tickLabels":false,"tickValues":[0,25,50,75,100],"variant":"warning","hideTextBoxes":true,"hideLeftTextBox":false,"hideRightTextBox":false,"disabled":false,"aria-label":"Range slider","aria-labelledby":null,"aria-describedby":"range-help"}</pre>
    </div>
  </multi-range-slider-component>
</slider-manager-component>
`;
